# llm-stack

./: .env.example  .gitignore  .pre-commit-config.yaml  .yamllint  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/actions/poetry/setup/: action.yaml
.github/workflows/: status-checks.yaml
src/llm_stack/: dummy.py  wandb_utils.py
src/llm_stack/build_dataset/: __init__.py  arxiv.py
src/llm_stack/build_dataset/prompts/: ner_function.json  openai_ner.json  openai_summarizer.json  openai_system.json  openai_user.json
src/llm_stack/openai/: __init__.py  openai_api.py  prompt_template.py
src/llm_stack/scripts/: build_dataset_ner.py
